header class added for logo and mystery card
Set pixel width of logo and mystery card under header class in css, aligned both to center and added img css to ensure that all images are 100% of parent elements.

--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,14 @@ body {
 .card {
     background-color: white;
 }
+
+.header {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 160px 160px;
+}
+
+img {
+    width: 100%;
+  }
