--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,15 @@ body {
     grid-template-columns: 160px 160px;
 }
 
+.cards {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto;
+    column-gap: 20px;
+    row-gap: 20px;
+
+}
+
 img {
     width: 100%;
   }
