--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,14 @@ body {
 
 }
 
+.wrap {
+    width: 900px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 img {
     width: 100%;
   }
