--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,15 @@ body {
     margin-right: auto;
 }
 
+.mystery {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: white;
+    border-radius: 100%;
+}
+
 img {
     width: 100%;
   }
