--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@ body {
 
 .card {
     background-color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 6px;
 }
 
 .header {
@@ -19,6 +24,8 @@ body {
     grid-template-rows: auto auto auto auto;
     column-gap: 20px;
     row-gap: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 
 }
 
@@ -37,6 +44,17 @@ body {
     padding-right: 10px;
     background-color: white;
     border-radius: 100%;
+}
+
+.instructions {
+    border-width: 4px;
+    border-style: solid;
+    border-color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+
 }
 
 img {
