--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,21 @@ body {
     background-color: #F0EFEC;
     font-family: Verdana;
     font-size: 15px;
+    text-align: center;
+    font-weight: bold;
     }
 
 .card {
     background-color: white;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 10px;
     border-radius: 6px;
+    box-shadow: 5px 5px 5px #00000075;
+    transition: padding 0.5s;
+    cursor: pointer;
+}
+
+.card:hover {
+    padding: 6px;
 }
 
 .header {
@@ -28,7 +34,8 @@ body {
     row-gap: 20px;
     margin-top: 40px;
     margin-bottom: 40px;
-
+    text-align: center;
+    font-weight: bold;
 }
 
 .wrap {
@@ -39,7 +46,7 @@ body {
     margin-right: auto;
 }
 
-.mystery {
+.mystery-card {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
@@ -56,7 +63,6 @@ body {
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
-
 }
 
 img {
