--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ body {
     font-family: Verdana;
     font-size: 15px;
     text-align: center;
-    font-weight: bold;
     }
 
 .card {
@@ -29,7 +28,6 @@ body {
 .cards {
     display: grid;
     grid-template-columns: auto auto auto auto auto;
-    grid-template-rows: auto auto auto auto;
     column-gap: 20px;
     row-gap: 20px;
     margin-top: 40px;
@@ -53,6 +51,10 @@ body {
     padding-right: 10px;
     background-color: white;
     border-radius: 100%;
+}
+
+.mystery-name {
+    font-weight: bold;
 }
 
 .instructions {
